[gd_scene load_steps=11 format=3 uid="uid://bvg87topw1dbf"]

[ext_resource type="Script" path="res://scripts/time_and_weather_.gd" id="1_2u5ir"]
[ext_resource type="FontFile" uid="uid://bsegnh8v4qc3c" path="res://assets/fonts/GmarketSansTTFBold.ttf" id="2_hnkd1"]
[ext_resource type="Texture2D" uid="uid://bkclt7ey5akgu" path="res://assets/etc_images/clouds_pnd_clipart-870.png" id="3_e2dc0"]
[ext_resource type="Script" path="res://scripts/rotate.gd" id="4_kmdi6"]


[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_yavjt"]
properties/0/path = NodePath(".:world_temperature")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:current_day")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:time_of_day")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:simulated_time_of_day")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:general_hotness")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:heat_variation")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="ViewportTexture" id="ViewportTexture_t7l05"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Environment" id="Environment_nj7sw"]
background_mode = 5

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_d7d3i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7m3ms"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nrb20"]
transparency = 1
diffuse_mode = 3
specular_mode = 1
albedo_texture = ExtResource("3_e2dc0")
emission_enabled = true
emission_energy_multiplier = 4.68
emission_texture = ExtResource("3_e2dc0")
uv1_scale = Vector3(-0.26, -0.26, -0.26)
uv1_offset = Vector3(-0.075, -0.23, -0.52)

[node name="TimeAndWeather" type="Node" node_paths=PackedStringArray("wind_arrow_camera", "wind_arrow")]
script = ExtResource("1_2u5ir")
wind_arrow_camera = NodePath("SubViewport/WindArrowCam")
wind_arrow = NodePath("WindArrowRotate")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_yavjt")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 14.0
offset_top = 61.0
offset_right = 54.0
offset_bottom = 101.0

[node name="Temperature" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 0
offset_right = 407.0
offset_bottom = 108.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_hnkd1")
theme_override_font_sizes/normal_font_size = 24
text = "TEMPERATURE"

[node name="Pressure" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 0
offset_top = 25.0
offset_right = 407.0
offset_bottom = 133.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_hnkd1")
theme_override_font_sizes/normal_font_size = 24
text = "PRESSURE"

[node name="Time" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 482.0
offset_right = 409.0
offset_bottom = 590.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_hnkd1")
theme_override_font_sizes/normal_font_size = 24
text = "TIME"

[node name="Humidity" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 0
offset_top = 49.0
offset_right = 407.0
offset_bottom = 157.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_hnkd1")
theme_override_font_sizes/normal_font_size = 24
text = "HUMIDITY"

[node name="Wind" type="RichTextLabel" parent="UI"]
z_index = 1
layout_mode = 0
offset_left = 867.0
offset_top = 481.75
offset_right = 1274.0
offset_bottom = 589.75
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_hnkd1")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]MPH"

[node name="Day" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_top = 547.0
offset_right = 407.0
offset_bottom = 655.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_hnkd1")
theme_override_font_sizes/normal_font_size = 24
text = "DAY"

[node name="WeatherArrow" type="Sprite2D" parent="UI"]
position = Vector2(1073, 527.75)
scale = Vector2(0.14, 0.14)
texture = SubResource("ViewportTexture_t7l05")

[node name="UpdateTimer" type="Timer" parent="."]
autostart = true

[node name="WeatherEvent" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1024, 1025)

[node name="WindArrowCam" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000977039, -0.162354, 0.25457)
cull_mask = 2
environment = SubResource("Environment_nj7sw")
attributes = SubResource("CameraAttributesPractical_d7d3i")
fov = 60.5

[node name="SubViewport2" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1024, 1025)

[node name="OrbCam" type="Camera3D" parent="SubViewport2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -0.162, 0.255)
cull_mask = 2
environment = SubResource("Environment_nj7sw")
attributes = SubResource("CameraAttributesPractical_d7d3i")
fov = 60.5

[node name="WindArrowRotate" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.30129, -0.853623)

[node name="WindArrow" type="CSGCylinder3D" parent="WindArrowRotate"]
transform = Transform3D(-0.505, -1.1059e-07, 1.92979e-15, 0, -5.52949e-08, -0.505, 4.41485e-08, -1.265, 2.20742e-08, 0, 0, 0)
layers = 2
material_override = SubResource("StandardMaterial3D_7m3ms")
radius = 0.191438
height = 0.414106
sides = 32

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="WindArrowRotate/WindArrow"]
transform = Transform3D(1, 1.42109e-13, 8.47033e-22, 0, 1, 1.77636e-15, 0, 7.10543e-15, 1, -4.69955e-08, 0.214602, -4.17233e-07)
layers = 2
radius = 0.385732
height = 0.316347
sides = 32
cone = true

[node name="Orb" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -0.301, -0.854)

[node name="Orb" type="CSGSphere3D" parent="Orb"]
transform = Transform3D(1.94707e-07, -1, 4.37114e-08, 0.680299, 1.00421e-07, -0.732935, 0.732935, 1.72444e-07, 0.680299, 0, 0, 0)
layers = 2
material_override = SubResource("StandardMaterial3D_nrb20")
radius = 0.191438
radial_segments = 24
script = ExtResource("4_kmdi6")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.761776, 0.647841, 0, -0.647841, -0.761776, 0, 1.1418, -2.91701)
layers = 2
light_energy = 10.467

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.822928, 0.568145, 0, -0.568145, 0.822928, 5, 1.142, 2.40695)
layers = 2
light_color = Color(0.803922, 0.721569, 1, 1)
light_energy = 5.997

[connection signal="timeout" from="UpdateTimer" to="." method="_on_update_timer_timeout"]
[connection signal="timeout" from="WeatherEvent" to="." method="_on_weather_event_timeout"]
